; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/input/mouse/extr_bcm5974.c_int2scale.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/input/mouse/extr_bcm5974.c_int2scale.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bcm5974_param = type { i32, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.bcm5974_param*, i32)* @int2scale to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @int2scale(%struct.bcm5974_param* %0, i32 %1) #0 {
  %3 = alloca %struct.bcm5974_param*, align 8
  %4 = alloca i32, align 4
  store %struct.bcm5974_param* %0, %struct.bcm5974_param** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* %4, align 4
  %6 = load %struct.bcm5974_param*, %struct.bcm5974_param** %3, align 8
  %7 = getelementptr inbounds %struct.bcm5974_param, %struct.bcm5974_param* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  %9 = mul nsw i32 %5, %8
  %10 = load %struct.bcm5974_param*, %struct.bcm5974_param** %3, align 8
  %11 = getelementptr inbounds %struct.bcm5974_param, %struct.bcm5974_param* %10, i32 0, i32 1
  %12 = load i32, i32* %11, align 4
  %13 = load %struct.bcm5974_param*, %struct.bcm5974_param** %3, align 8
  %14 = getelementptr inbounds %struct.bcm5974_param, %struct.bcm5974_param* %13, i32 0, i32 2
  %15 = load i32, i32* %14, align 4
  %16 = sub nsw i32 %12, %15
  %17 = sdiv i32 %9, %16
  ret i32 %17
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
